[package]
name = "hyperway"
version = "0.1.5"
rust-version = "1.85.0"
edition = "2024"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hyperway"
path = "src/main.rs"

[[bin]]
name = "hyperway_controller"
path = "src/gateway_controller.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio.workspace = true
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", features = [
    "logging",
    "tls12",
], default-features = false }
futures-util.workspace = true
log.workspace = true
chrono = "0.4"
prometheus-client.workspace = true
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22"
jemallocator = { version = "0.5", optional = true }
mimalloc = { version = "0.1", optional = true }
log_x = { path = "../log_x" }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "rustls-platform-verifier",
    "http2",
    "native-tokio",
    "http1",
    "logging",
] }
http = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
regex = "1"
# axum-bootstrap = { git = "https://github.com/arloor/axum-bootstrap", branch = "master",default-features = false  }
axum-bootstrap = { version = "0.1", default-features = false }
tower = "0.5"
socket2 = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "timeout",
    "trace",
    "compression-full",
] }
axum = "0.8"
tracing = "0.1"
build-time = "0.1.3"
anyhow = "1"
serde_yaml_bw = "2.5.1"

[dev-dependencies]
rcgen = "0.13"

[features]
default = ["aws_lc_rs", "mimalloc"]
jemalloc = ["jemallocator"]
mimalloc = ["dep:mimalloc"]
aws_lc_rs = ["tokio-rustls/aws-lc-rs", "hyper-rustls/aws-lc-rs"]
ring = ["tokio-rustls/ring", "hyper-rustls/ring"]
